<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="rain">Rain</string>
    <string name="showers">Showers</string>
    <string name="scattered_showers">Scattered Showers</string>
    <string name="cloudy">Cloudy</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="mon">Mon</string>
    <string name="tues">Tue</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
</resources>