<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="75px"
    android:paddingTop="30px"
    android:background="#330000FF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35px"
            android:layout_marginTop="50px"
            android:text="@string/mon"/>

        <ImageView
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_marginLeft="35px"
            android:contentDescription="@string/partly_cloudy"
            android:src="@drawable/partly_cloudy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:text="@string/partly_cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_weight="1"
                android:text="24C - 31C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35px"
            android:layout_marginTop="50px"
            android:text="@string/tues"/>

        <ImageView
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_marginLeft="35px"
            android:contentDescription="@string/partly_cloudy"
            android:src="@drawable/showers" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:text="@string/showers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_weight="1"
                android:text="24C - 30C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35px"
            android:layout_marginTop="50px"
            android:text="@string/wed"/>

        <ImageView
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_marginLeft="35px"
            android:contentDescription="@string/partly_cloudy"
            android:src="@drawable/rain"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:text="@string/rain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_weight="1"
                android:text="22C - 23C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35px"
            android:layout_marginTop="50px"
            android:text="@string/thurs"/>

        <ImageView
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_marginLeft="35px"
            android:contentDescription="@string/scattered_showers"
            android:src="@drawable/scattered_showers"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:text="@string/scattered_showers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_weight="1"
                android:text="22C - 27C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35px"
            android:layout_marginTop="50px"
            android:text="@string/fri"/>

        <ImageView
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_marginLeft="35px"
            android:contentDescription="@string/cloudy"
            android:src="@drawable/cloud"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:text="@string/cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_weight="1"
                android:text="22C - 30C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35px"
            android:layout_marginTop="50px"
            android:text="@string/sat"/>

        <ImageView
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_marginLeft="35px"
            android:contentDescription="@string/partly_cloudy"
            android:src="@drawable/partly_cloudy"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:text="@string/partly_cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_weight="1"
                android:text="24C - 31C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35px"
            android:layout_marginTop="50px"
            android:text="@string/sun"/>

        <ImageView
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_marginLeft="35px"
            android:contentDescription="@string/thunderstorm"
            android:src="@drawable/thunderstorm"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_marginTop="25px"
                android:layout_weight="1"
                android:text="@string/thunderstorm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35px"
                android:layout_weight="1"
                android:text="25C - 28C" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
